<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="applicationLabel">Contacts</string>
    <string name="launcherActivityLabel">Contacts</string>
    <string name="quickContactActivityLabel">View Contact</string>
    <string name="editContactActivityLabel">Edit Contact</string>
    <string name="contactsList">Contacts</string>
    <string name="shortcutContact">Contact</string>
    <string name="shortcutDialContact">Direct dial</string>
    <string name="shortcutMessageContact">Direct message</string>
    <string name="shortcutActivityTitle">Choose a contact shortcut</string>
    <string name="callShortcutActivityTitle">Choose a number to call</string>
    <string name="messageShortcutActivityTitle">Choose a number to message</string>
    <string name="contactInsertOrEditActivityTitle">Add to contact</string>
    <string name="contactPickerActivityTitle">Choose Contacts</string>
    <string name="header_entry_contact_list_adapter_header_title">Create new contact</string>
    <string name="starredList">Starred</string>
    <string name="frequentList">Frequent</string>
    <string name="strequentList">Favorites</string>
    <string name="viewContactTitle">Contact details</string>
    <string name="editContactDescription">Edit contact</string>
    <string name="insertContactDescription">Create contact</string>
    <string name="editGroupDescription">Edit group</string>
    <string name="insertGroupDescription">Create group</string>
    <string name="contactDetailAbout">About</string>
    <string name="contactDetailUpdates">Updates</string>
    <string name="searchHint">Search contacts</string>
    <string name="menu_viewContact">View contact</string>
    <string name="menu_addStar">Add to favorites</string>
    <string name="menu_removeStar">Remove from favorites</string>
    <string name="description_action_menu_remove_star">Removed from favorites</string>
    <string name="description_action_menu_add_star">Added to favorites</string>
    <string name="menu_editContact">Edit</string>
    <string name="menu_deleteContact">Delete</string>
    <string name="menu_change_photo">Change photo</string>
    <string name="menu_create_contact_shortcut">Place on Home screen</string>
    <string name="menu_call">Call contact</string>
    <string name="menu_sendSMS">Text contact</string>
    <string name="menu_splitAggregate">Unlink</string>
    <string name="menu_editGroup">Edit</string>
    <string name="menu_deleteGroup">Delete</string>
    <string name="menu_new_contact_action_bar">Add Contact</string>
    <string name="menu_new_group_action_bar">Add Group</string>
    <string name="splitConfirmation">Unlink this contact into multiple contacts?</string>
    <string name="splitConfirmation_positive_button">Unlink</string>
    <string name="splitConfirmationWithPendingChanges">Would you like to save the changes you already made and unlink this contact into multiple contacts?</string>
    <string name="splitConfirmationWithPendingChanges_positive_button">Save and Unlink</string>
    <string name="joinConfirmation">Would you like to save the changes you already made and link with the contact selected?</string>
    <string name="joinConfirmation_positive_button">Save and Link</string>
    <string name="menu_joinAggregate">Link</string>
    <string name="menu_save">Save</string>
    <string name="titleJoinContactDataWith">Link contacts</string>
    <string name="blurbJoinContactDataWith">Choose the contact you want to link with <xliff:g
        id="name">%s</xliff:g>:</string>
    <string name="showAllContactsJoinItem">Show all contacts</string>
    <string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
    <string name="separatorJoinAggregateAll">All contacts</string>
    <string name="contactsJoinedMessage">Contacts linked</string>
    <plurals name="contacts_deleted_toast">
        <item quantity="one">Contact deleted</item>
        <item quantity="other">Contacts deleted</item>
    </plurals>
    <string name="menu_set_ring_tone">Set ringtone</string>
    <string name="menu_redirect_calls_to_vm">All calls to voicemail</string>
    <string name="readOnlyContactWarning">Contacts from your read-only accounts cannot be deleted, but they can be hidden.</string>
    <string name="readOnlyContactWarning_positive_button">Hide</string>
    <string name="readOnlyContactDeleteConfirmation">The contact to be deleted has details from multiple accounts. Details from read-only accounts will be hidden, not deleted.</string>
    <string name="batch_link_single_contact_warning">You need at least two contacts selected to perform a link.</string>
    <string name="batch_link_confirmation">Link selected contacts?</string>
    <string name="batch_link_confirmation_positive_button">Link</string>
    <string name="single_delete_confirmation">Delete this contact?</string>
    <string name="batch_delete_confirmation">Delete selected contacts?</string>
    <string name="batch_delete_read_only_contact_confirmation">Contacts from your read-only accounts cannot be deleted, but they can be hidden.</string>
    <string name="batch_delete_multiple_accounts_confirmation">The contacts to be deleted have details from multiple accounts. Details from read-only accounts will be hidden, not deleted.</string>
    <string name="multipleContactDeleteConfirmation">Deleting this contact will delete details from multiple accounts.</string>
    <string name="deleteConfirmation">Delete this contact?</string>
    <string name="deleteConfirmation_positive_button">Delete</string>
    <string name="menu_discard">Discard changes</string>
    <string name="invalidContactMessage">The contact doesn\'t exist.</string>
    <string name="createContactShortcutSuccessful_NoName">Contact added to Home screen.</string>
    <string name="createContactShortcutSuccessful"><xliff:g id="name">%s</xliff:g> added to Home screen.</string>
    <string name="pickerNewContactHeader">Create new contact</string>
    <string name="pickerNewContactText">Create new contact</string>
    <string-array name="otherLabels">
        
        <item>Organization</item>
        
        <item>Note</item>
    </string-array>
    <string name="photoPickerNotFoundText" product="default">No pictures are available on the phone.</string>
    <string name="attach_photo_dialog_title">Contact photo</string>
    <string name="customLabelPickerTitle">Custom label name</string>
    <string name="send_to_voicemail_checkbox">Send calls directly to voicemail</string>
    <string name="removePhoto">Remove photo</string>
    <string name="noContacts">No contacts</string>
    <string name="noGroups">No groups.</string>
    <string name="noAccounts">To create groups you need an account.</string>
    <string name="emptyGroup">No people in this group.</string>
    <string name="addPeopleToGroup">To add some, edit the group.</string>
    <string name="savingContact">Saving contact\u2026</string>
    <string name="contactSavedToast">Contact saved</string>
    <string name="contactUnlinkedToast">Contacts unlinked</string>
    <string name="contactSavedErrorToast">Couldn\'t save contact changes.</string>
    <string name="contactUnlinkErrorToast">Couldn\'t unlink contact.</string>
    <string name="contactJoinErrorToast">Couldn\'t link contact.</string>
    <string name="contactGenericErrorToast">Error saving contact.</string>
    <string name="contactPhotoSavedErrorToast">Couldn\'t save contact photo changes.</string>
    <string name="groupSavedToast">Group saved.</string>
    <string name="groupSavedErrorToast">Couldn\'t save group changes.</string>
    <plurals name="listTotalPhoneContacts">
        <item quantity="one">1 contact with phone number</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> contacts with phone numbers</item>
    </plurals>
    <string name="listTotalPhoneContactsZero">No contacts with phone numbers</string>
    <plurals name="listFoundAllContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="listFoundAllContactsZero">No contacts</string>
    <plurals name="searchFoundContacts">
        <item quantity="one">1 found</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> found</item>
    </plurals>
    <string name="all_contacts_tab_label">All</string>
    <string name="favorites_tab_label">Favorites</string>
    <string name="callBack">Call back</string>
    <string name="callAgain">Call again</string>
    <string name="returnCall">Return call</string>
    <string name="add_contact_dlg_message_fmt">Add \"<xliff:g id="email">%s</xliff:g>\" to contacts?</string>
    <string name="description_contact_photo">contact photo</string>
    <string name="description_plus_button">plus</string>
    <string name="exporting_contact_list_progress"><xliff:g id="current_number">%s</xliff:g> of <xliff:g id="total_number">%s</xliff:g> contacts</string>
    <string name="search_settings_description">Names of your contacts</string>
    <string name="quickcontact_missing_app">No app was found to handle this action.</string>
    <string name="quickcontact_transparent_view_description">Click to return to previous screen</string>
    <string name="quickcontact_add_phone_number">Add phone number</string>
    <string name="quickcontact_add_email">Add email</string>
    <string name="missing_app">No app was found to handle this action.</string>
    <string name="menu_share">Share</string>
    <string name="menu_add_contact">Add to contacts</string>
    <string name="share_via">Share contact via</string>
    <string name="dialog_new_group_account">Create group under account</string>
    <string name="audio_chat">Voice chat</string>
    <string name="video_chat">Video chat</string>
    <string name="connections">Connections</string>
    <string name="add_connection_button">Add connection</string>
    <string name="recent" msgid="2062236709538790412">Recent</string>
    <string name="recent_updates" msgid="2018245636796411442">Recent updates</string>
    <string name="account_type_format" msgid="718948015590343010">"storage location：<xliff:g id="SOURCE">%1$s</xliff:g>"</string>
    <string name="account_type_format1" >"storage location：<xliff:g id="SOURCE1">%1$s</xliff:g><xliff:g id="SOURCE2">%2$s</xliff:g>"</string>
    <string name="google_account_type_format"><xliff:g id="source" example="Google">%1$s</xliff:g> account</string>
    <string name="from_account_format" translate="false"><xliff:g id="source" example="user@gmail.com">%1$s</xliff:g></string>
    <string name="contact_read_only">Not editable from this app.</string>
    <string name="group_read_only">Not editable on this device.</string>
    <string name="take_photo">Take photo</string>
    <string name="take_new_photo">Take new photo</string>
    <string name="pick_photo">Choose photo</string>
    <string name="pick_new_photo">Select new photo</string>
    <string name="upgrade_in_progress">Contact list is being updated.</string>
    <string name="search_results_searching">Searching\u2026</string>
    <string name="menu_display_selected">"Show selected"</string>
    <string name="menu_display_all">"Show all"</string>
    <string name="menu_select_all">"Select all"</string>
    <string name="menu_select_none">"Unselect all"</string>
    <string name="add_field">Add another field</string>
    <string name="menu_help">Help &amp; feedback</string>
    <string name="twodeminsioncode">two-deminsion code</string>
    <string name="quickcontact_suggestion_cancel_button">CANCEL</string>
    <string name="suggestion_card_this_contact_title">This contact</string>
    <string name="suggestion_card_duplicates_title">Possible duplicates</string>
    <string name="suggestion_card_help_message">These contacts might be the same person. You can link them together as a single contact.</string>
</resources>